--- a/.gitignore
+++ b/.gitignore
@@ -298,3 +298,27 @@ __pycache__/
 *.odx.cs
 *.xsd.cs
 .vscode
+
+# React
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
