--- a/src/MyAccounting.WebApi/MyAccounting.WebApi.csproj
+++ b/src/MyAccounting.WebApi/MyAccounting.WebApi.csproj
@@ -5,11 +5,19 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.12">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     </ItemGroup>
 
     <ItemGroup>
       <Folder Include="Controllers" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\MyAccounting.Infrastructure\MyAccounting.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
