--- a/src/MyAccounting.WebApi/appsettings.Development.json
+++ b/src/MyAccounting.WebApi/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=MyAccountingDb;Trusted_Connection=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
