--- a/src/MyAccounting.Application/MyAccounting.Application.csproj
+++ b/src/MyAccounting.Application/MyAccounting.Application.csproj
@@ -4,4 +4,8 @@
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\MyAccounting.Domain\MyAccounting.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
