--- a/src/MyAccounting.Application/MyAccounting.Application.csproj
+++ b/src/MyAccounting.Application/MyAccounting.Application.csproj
@@ -8,4 +8,9 @@
       <ProjectReference Include="..\MyAccounting.Domain\MyAccounting.Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.12" />
+    </ItemGroup>
+
 </Project>
