Includes references required for 'WebApi.Tests' project

--- a/tests/MyAccounting.WebApi.Tests/MyAccounting.WebApi.Tests.csproj
+++ b/tests/MyAccounting.WebApi.Tests/MyAccounting.WebApi.Tests.csproj
@@ -21,4 +21,9 @@
         </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\src\MyAccounting.Application\MyAccounting.Application.csproj" />
+      <ProjectReference Include="..\..\src\MyAccounting.WebApi\MyAccounting.WebApi.csproj" />
+    </ItemGroup>
+
 </Project>
